# magma

./: .gitignore  build.bat  debug.txt  for_sample.txt  main.c  main.cpp  main.mgs  run.bat
src/c/: .gitignore  CMakeLists.txt  Collectors.c  HeadedStream.c  JavaList.c  JavaListHead.c  JavaOptionals.c  JavaPath.c  JavaSet.c  Magma.sln  Main.c  MyProject.sln  None.c  Option.c  Path.c  Some.c  Stream.c  build.bat
src/c/magma/: ApplicationError.c  CompileError.c  CompileException.c  CompileException.h  Compiler.c  Err.c  Error.c  FirstLocator.c  FirstLocator.h  InfixRule.c  JavaError.c  JavaPaths.c  LastLocator.c  LastLocator.h  Locator.c  Locator.h  Main.c  Main.h  MapNode.c  MapNode.h  Node.c  Node.h  NodeRule.c  NodeRule.h  Ok.c  Result.c  Results.c  Rule.c  State.c  State.h  StringRule.h  StripRule.c  Tuple.c  Tuple.h
src/c/magma/api/: Tuple.c  Tuple.h
src/c/magma/app/: Application.c  CompileException.c  Compiler.c  DividingState.c  Formatter.c  Formatter.h  ImportCompiler.c  InlinePassUnit.c  InlinePassUnit.h  MapNode.c  MapNode.h  Namer.c  Namer.h  Node.c  Node.h  PackageCompiler.c  PassUnit.c  PassUnit.h  Passer.c  Passer.h  PassingStage.c  PassingStage.h  RootPasser.c  RootPasser.h  Splitter.c  State.c  State.h  StructCompiler.c  TreePassingStage.c  TreePassingStage.h
src/c/magma/collect/: Deque.c  List.c  Set.c
src/c/magma/error/: ApplicationError.c  ApplicationError.h  CompileError.c  CompileError.h  Error.c  Error.h  JavaError.c  JavaError.h
src/c/magma/io/: Error.c  IOError.c  Path.c
src/c/magma/java/: JavaCollections.c  JavaError.c  JavaFiles.c  (+10 more)
(+1465 files in other folders)
